# mini_parser

./: .gitignore  data_to_parse.html  pyproject.toml  requirements.txt  rm_list.txt
parse_project/: dashboard.py  main.py  main_funcs.py
