[tool.poetry]
name = "mini-parser"
version = "0.1.0"
description = ""
authors = ["pavel.grishaev <pollxx97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
bs4 = "^0.0.2"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
